Add the ability to filter bills by date