@@ -23,7 +23,7 @@ version '2.0-SNAPSHOT'
 
 javafx {
     version = "16"
-    modules = [ 'javafx.controls', 'javafx.fxml' ]
+    modules = ['javafx.controls', 'javafx.fxml']
 }
 
 mainClassName = 'hr.ferit.dominikzivko.unistat.App'
@@ -49,6 +49,15 @@ dependencies {
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+}
+
+run {
+    jvmArgs = [
+            '--add-exports=javafx.base/com.sun.javafx.binding=ALL-UNNAMED',
+            '--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED',
+            '--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED',
+            '--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED',
+    ]
 }
 
 test {
